--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v2
 
-      # Runs a set of commands using the runners shell
+      # Runs a set of commands using the runners shellv
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
