--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -3,8 +3,8 @@ name: image-builder
 on: [push]
 
 env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository_owner }}/actions-runner
+  REGISTRY: quay.cnqr.delivery
+  IMAGE_NAME: ktg/rpl-k8s-linux-runner-docker
 
 jobs:
   build:
@@ -20,12 +20,12 @@ jobs:
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v2
       
-      # - name: Log into registry ${{ env.REGISTRY }}
-      #   uses: docker/login-action@v2
-      #   with:
-      #     registry: ${{ env.REGISTRY }}
-      #     username: ${{ github.actor }}
-      #     password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Log into registry ${{ env.REGISTRY }}
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ secrets.QUAY_USER }}
+          password: ${{ secrets.QUAY_TOKEN }}
 
       - name: Build and push Docker image
         id: build-and-push
@@ -35,9 +35,8 @@ jobs:
           platforms: |
             linux/amd64
             linux/arm64
-          # tags: |
-          #   ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.image.outputs.version }}
-          #   ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:0.0.6
           build-args: |
             RUNNER_VERSION=2.312.0
           push: false
