--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -3,8 +3,8 @@ name: image-builder #Builds and Pushes Image
 on: [push]
 
 env:
-  REGISTRY: quay.cnqr.delivery
-  IMAGE_NAME: ktg/rpl-k8s-linux-runner-docker
+  REGISTRY: sharmapankaj3784
+  IMAGE_NAME: test-arch-docker
 
 jobs:
   build:
@@ -20,12 +20,12 @@ jobs:
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v2
       
-      - name: Log into registry ${{ env.REGISTRY }}
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.QUAY_USER }}
-          password: ${{ secrets.QUAY_TOKEN }}
+      # - name: Log into registry ${{ env.REGISTRY }}
+      #   uses: docker/login-action@v2
+      #   with:
+      #     registry: ${{ env.REGISTRY }}
+      #     username: ${{ secrets.QUAY_USER }}
+      #     password: ${{ secrets.QUAY_TOKEN }}
 
       - name: Build and push Docker image
         id: build-and-push
@@ -36,10 +36,10 @@ jobs:
             linux/amd64
             linux/arm64
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:0.0.6
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:0.0.1
           build-args: |
             RUNNER_VERSION=2.312.0
-          push: false
+          push: true
           labels: |
             org.opencontainers.image.source=${{github.server_url}}/${{github.repository}}
             #org.opencontainers.image.description=https://github.com/actions/runner/releases/tag/v${{ steps.image.outputs.version }}
