--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -20,12 +20,12 @@ jobs:
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v2
       
-      # - name: Log into registry ${{ env.REGISTRY }}
-      #   uses: docker/login-action@v2
-      #   with:
-      #     registry: ${{ env.REGISTRY }}
-      #     username: ${{ secrets.QUAY_USER }}
-      #     password: ${{ secrets.QUAY_TOKEN }}
+      - name: Log into registry ${{ env.REGISTRY }}
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ secrets.QUAY_USER }}
+          password: ${{ secrets.QUAY_TOKEN }}
 
       - name: Build and push Docker image
         id: build-and-push
