--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -3,7 +3,7 @@ name: image-builder #Builds and Pushes Image
 on: [push]
 
 env:
-  REGISTRY: hub.docker.com
+  # REGISTRY: hub.docker.com
   IMAGE_NAME: sharmapankaj3784/test-arch-docker
 
 jobs:
@@ -20,10 +20,10 @@ jobs:
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v2
       
-      - name: Log into registry ${{ env.REGISTRY }}
-        uses: docker/login-action@v2
+      - name: Log into Docker Hub
+        uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          # registry: ${{ env.REGISTRY }}
           username: ${{ secrets.QUAY_USER }}
           password: ${{ secrets.QUAY_TOKEN }}
 
@@ -35,8 +35,10 @@ jobs:
           platforms: |
             linux/amd64
             linux/arm64
+          # tags: |
+          #   ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:0.0.1
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:0.0.1
+            ${{ env.IMAGE_NAME }}:0.0.1
           build-args: |
             RUNNER_VERSION=2.312.0
           push: true
